--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </div>
 
-  <!-- Navigation section  -->
+  
 
   <div class="navbar navbar-default navbar-static-top" role="navigation">
     <div class="container">
@@ -48,14 +48,14 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li class="active"><a href="index.html">Головна сторінка</a></li>
-          <li><a href="about.html">Дізнатися більше</a></li>
+          <li class="active"> <a href="about.html">Дізнатися більше</a></li>
         </ul>
       </div>
 
     </div>
   </div>
 
-  <!-- Home Section -->
+  
 
   <section id="home" class="main-home parallax-section">
     <div class="overlay"></div>
@@ -72,7 +72,7 @@
     </div>
   </section>
 
-  <!-- Blog Section -->
+
 
   <section id="blog">
     <div class="container">
@@ -131,8 +131,7 @@
             </div>
             <div class="blog-post-format">
               <span><a href="#"><img src="images/author-image1.jpg" class="img-responsive img-circle"> </a></span>
-              <span><i class="fa fa-date"></i> May 30, 2017</span>
-              <span><a href="#"><i class="fa fa-comment-o"></i> 63 Comments</a></span>
+              
             </div>
             <div class="blog-post-des">
               <p></p>
@@ -211,23 +210,15 @@
         </div>
 
         <div class="col-md-12 col-sm-12">
-          <ul class="social-icon">
-            <li><a href="#" class="fa fa-facebook"></a></li>
-            <li><a href="#" class="fa fa-twitter"></a></li>
-            <li><a href="#" class="fa fa-google-plus"></a></li>
-            <li><a href="#" class="fa fa-dribbble"></a></li>
-            <li><a href="#" class="fa fa-linkedin"></a></li>
-          </ul>
+          
         </div>
 
       </div>
     </div>
   </footer>
 
-  <!-- Back top -->
-  <a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a>
 
-  <!-- SCRIPTS -->
+  <a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a
 
   <script src="jquery.js"></script>
   <script src="bootstrap.min.js"></script>
