--- a/about.html
+++ b/about.html
@@ -10,25 +10,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <title>JavaScript</title>
-<!--
 
-Template 2085 Neuron
 
-http://www.tooplate.com/view/2085-neuron
 
--->
 <link rel="stylesheet" href="bootstrap.min.css">
 <link rel="stylesheet" href="font-awesome.min.css">
   <link rel="stylesheet" href="main.css">
 
-<!-- Main css -->
+
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather:300,400" rel="stylesheet">
 
 </head>
 <body>
 
-<!-- PRE LOADER -->
+
 
 <div class="preloader">
      <div class="sk-spinner sk-spinner-wordpress">
@@ -36,7 +32,7 @@ http://www.tooplate.com/view/2085-neuron
      </div>
 </div>
 
-<!-- Navigation section  -->
+
 
 <div class="navbar navbar-default navbar-static-top" role="navigation">
      <div class="container">
@@ -47,7 +43,7 @@ http://www.tooplate.com/view/2085-neuron
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <a href="index.html" class="navbar-brand">JavaScript</a>
+               <a href="about.html" class="navbar-brand">JavaScript</a>
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
@@ -59,7 +55,7 @@ http://www.tooplate.com/view/2085-neuron
   </div>
 </div>
 
-<!-- Home Section -->
+
 
 <section id="home" class="main-about parallax-section">
      <div class="overlay"></div>
@@ -74,7 +70,7 @@ http://www.tooplate.com/view/2085-neuron
      </div>
 </section>
 
-<!-- About Section -->
+
 
 <section id="about">
      <div class="container">
@@ -143,7 +139,7 @@ script src="шлях/до/файлу/зі/скриптом.js script</p>
      </div>
 </section>
 
-<!-- Footer Section -->
+
 
 <footer>
      <div class="container">
@@ -166,23 +162,17 @@ script src="шлях/до/файлу/зі/скриптом.js script</p>
                </div>
 
                <div class="col-md-12 col-sm-12">
-                    <ul class="social-icon">
-                         <li><a href="#" class="fa fa-facebook"></a></li>
-                         <li><a href="#" class="fa fa-twitter"></a></li>
-                         <li><a href="#" class="fa fa-google-plus"></a></li>
-                         <li><a href="#" class="fa fa-dribbble"></a></li>
-                         <li><a href="#" class="fa fa-linkedin"></a></li>
-                    </ul>
+                    
                </div>
                
           </div>
      </div>
 </footer>
 
-<!-- Back top -->
-<a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a>
 
-<!-- SCRIPTS -->
+
+  
+
 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
