--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <a href="about.html" class="navbar-brand">JavaScript</a>
+               <a href="index.html" class="navbar-brand">JavaScript</a>
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
